# admin-api-golang/api/dao/syaAdmin.go
@@ -1,0 +1,15 @@
+// 用户数据层
+
+package dao
+
+import (
+	"admin-api-golang/api/entity"
+	. "admin-api-golang/pkg/db"
+)
+
+// SysAdminDetail 用户详情
+func SysAdminDetail(dto entity.LoginDto) (sysAdmin entity.SysAdmin) {
+	username := dto.Username
+	Db.Where("username = ?", username).First(&sysAdmin)
+	return sysAdmin
+}
