# admin-api-golang/api/service/sysAdmin.go
@@ -1,0 +1,65 @@
+// 用户服务层
+package service
+
+import (
+	"admin-api-golang/api/dao"
+	"admin-api-golang/api/entity"
+	"admin-api-golang/common/result"
+	"admin-api-golang/common/util"
+	"admin-api-golang/pkg/jwt"
+	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
+)
+
+// ISysAdminService 定义接口
+type ISysAdminService interface {
+	Login(c *gin.Context, dto entity.LoginDto)
+}
+type SysAdminServiceImpl struct{}
+
+// Login 登录
+func (s SysAdminServiceImpl) Login(c *gin.Context, dto entity.LoginDto) {
+	// 登录参数校验
+	err := validator.New().Struct(dto)
+	if err != nil {
+		result.Failed(c, int(result.ApiCode.MissingLoginParameter),
+			result.ApiCode.GetMessage(result.ApiCode.MissingLoginParameter))
+		return
+	}
+	// 验证码是否过期
+	code := util.RedisStore{}.Get(dto.IdKey, true)
+	if len(code) == 0 {
+		result.Failed(c, int(result.ApiCode.VerificationCodeHasExpired),
+			result.ApiCode.GetMessage(result.ApiCode.VerificationCodeHasExpired))
+		return
+	}
+	// 校验验证码
+	verifyRes := CaptVerify(dto.IdKey, dto.Image)
+	if !verifyRes {
+		result.Failed(c, int(result.ApiCode.CAPTCHANOTTRUE),
+			result.ApiCode.GetMessage(result.ApiCode.CAPTCHANOTTRUE))
+		return
+	}
+	// 校验
+	sysAdmin := dao.SysAdminDetail(dto)
+	if sysAdmin.Password != util.EncryptionMd5(dto.Password) {
+		result.Failed(c, int(result.ApiCode.PASSWORDNOTTRUE),
+			result.ApiCode.GetMessage(result.ApiCode.PASSWORDNOTTRUE))
+		return
+	}
+	const status int = 2
+	if sysAdmin.Status == status {
+		result.Failed(c, int(result.ApiCode.STATUSISENABLE),
+			result.ApiCode.GetMessage(result.ApiCode.STATUSISENABLE))
+		return
+	}
+	// 生成token
+	tokenString, _ := jwt.GenerateTokenByAdmin(sysAdmin)
+	result.Success(c, map[string]interface{}{"token": tokenString, "sysAdmin": sysAdmin})
+}
+
+var sysAdminService = SysAdminServiceImpl{}
+
+func SysAdminService() ISysAdminService {
+	return &sysAdminService
+}
